// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sqaure Component Field square render  1`] = `
<button
  className="square"
  onClick={[Function]}
/>
`;

exports[`Sqaure Component Labelsquare render 1`] = `
<button
  className="labelSquare"
  onClick={[Function]}
>
  1
</button>
`;

exports[`Sqaure Component Matches the snapshot 1`] = `
<button
  className="labelSquare"
  onClick={[Function]}
>
  1
</button>
`;

exports[`Sqaure Component Matches the snapshot 2  1`] = `
<button
  className="row"
  onClick={[Function]}
/>
`;
